# Faillist

./: CMakeLists.txt  README.md
Faillist/: CMakeLists.txt  Makefile
Faillist/include/file_handling/: file_reader.h  pars_faillure.h  pars_raised_error.h
Faillist/include/report/: file_max_size.h  init_report.h  max_comment_size.h  report.h  write_report.h
Faillist/include/report/faillure/: failure.h  write_failure.h  write_failure_date.h
Faillist/include/report/id_plane/: id_plane_def.h  id_plane_max_size.h
Faillist/include/report/type_plane/: type_plane.h
Faillist/include/tool/: embedded_localtime.h  is_number.h
Faillist/src/: main.c
Faillist/src/file_handling/: file_reader.c  jsoneq.c  pars_faillure.c  pars_raised_error.c
Faillist/src/report/: init_report.c  open_report.c  write_report.c
Faillist/src/report/failure/: write_failure.c  write_failure_date.c
Faillist/src/tool/: embedded_localtime.c  is_number.c
Faillist/test/test_file_handling/test_file_reader/: test_file_reader.c  test_file_reader.h
Faillist/test/test_file_handling/test_jsoneq/: test_jsoneq.c  test_jsoneq.h
Faillist/test/test_file_handling/test_pars_faillure/: test_pars_faillure.c  test_pars_faillure.h
Faillist/test/test_file_handling/test_pars_raised_error/: test_pars_raised_error.c  test_pars_raised_error.h
Faillist/test/test_report/test_init_report/: test_init_report.c  test_init_report.h
Faillist/test/test_report/test_open_report/: test_open_report.c  test_open_report.h
Faillist/test/test_report/test_write_report/: test_write_report.c  test_write_report.h
(+123 files in other folders)
